--- a/WebContent/WEB-INF/views/registrar_materia.html
+++ b/WebContent/WEB-INF/views/registrar_materia.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    	<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Registrar Materia</title>
         
-        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Registrar Materia</title>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js" ></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js" ></script>
@@ -16,7 +17,7 @@
             <!--Encabezado-->
             <header data-role="header" data-theme="b">
                 <a href="/App00/" data-icon="back" data-iconpos="notext"> </a>
-                <h1>Registrar Materia</h1>
+                <h1>Registra Materia</h1>
             </header>
 
             <!--Contenido-->
