--- a/WebContent/WEB-INF/views/actualizar_alumno.html
+++ b/WebContent/WEB-INF/views/actualizar_alumno.html
@@ -22,7 +22,7 @@
 
             <!--Contenido-->
             <section data-role="content">
-                <h2>Editar Alumno</h2>
+                <h2>Edita Alumno</h2>
                 <label> Seleccione al alumno:</label>
                 <select id="comboAlumnos">
 
@@ -57,7 +57,7 @@
                     </form>
     
                     <aside id="divLienzo" class="ui-block-b"> 
-                        <img width="100%" src="#"/>    
+                        <img id="imgFoto" width="100%" src="#"/>    
                     </aside>        
                 </div>                
             </section>
@@ -70,7 +70,7 @@
 	    
 		obtenerDatosAlumno("listarAlumno");
 		
-	
+		//EVENTO DE CAMBIO DE FOTO
 	    let inputFoto = document.querySelector('#iptFoto');
         inputFoto.addEventListener('change', () => {
             if (desplegarFoto() == false) {
@@ -78,17 +78,17 @@
             }
         });
         
+        //EVENTO CAMBIO DE ALUMNO
 		let alumnoSeleccionado = document.querySelector("#comboAlumnos");
 		alumnoSeleccionado.addEventListener('change', () => {
             let id_alumno = alumnoSeleccionado.value
             if (id_alumno > 0) consultarAlumno("consultaAlumno/"+id_alumno);
         });
 		
-		//evento el cual se dispara cuando el boton guardar clikeado
-        let accionEditar = document.querySelector("#btnEditarAlumno");   	 	
+		
+		let accionEditar = document.querySelector("#btnEditarAlumno");   	 	
         accionEditar.addEventListener('click', capturarDatosAlumno);
         
-	
 		//evento el cual se dispara cuando el input de la fecha de nacimiento pierde el focus.
         let accionEdad = document.querySelector("#iptFechaNacimiento");    
         accionEdad.addEventListener("blur", () => {
@@ -171,8 +171,9 @@
     	let urlImagen = cargarBufferJPGE(alumno.contenido);
     	desplegarFoto2(urlImagen);
     	
+    	localStorage.setItem("Foto", alumno.contenido);    	    	
 	}
-    
+   
     
     //desplegarFoto
     let desplegarFoto2 = (url) => {
@@ -192,7 +193,7 @@
           
         let foto = document.createElement('img');
         foto.setAttribute("width", "100%");
-        
+        foto.setAttribute("id", "imgFoto");
         //foto.src = URL.createObjectURL(url);
         foto.src = url
         lienzo.appendChild(foto);
@@ -210,38 +211,62 @@
         let apellidoMaterno = document.getElementById("iptApellido2").value;
         let fechaNacimiento = document.getElementById("iptFechaNacimiento").value;
         let correoElectronico = document.getElementById("iptCorreo").value;
+        let foto = document.getElementById("iptFoto").value;
+        console.log(foto)
         
-        
-
-        let lector = new FileReader();
-        let entradaFoto = document.querySelector('#iptFoto');
-        let archivo = entradaFoto.files;
-        let blob = new Blob(archivo, {type : 'image/jpeg'})
-        console.log(archivo)
-        
-
-        lector.readAsBinaryString(blob);
-        lector.onload = () => {
-            let jpge64 = window.btoa(lector.result);
+        if (foto == null) {
+        	let alumno = {
+                	"id_alumno" : id_alumno,
+                    "nombre" : nombre,
+                    "apellidoPaterno" : apellidoPaterno,
+                    "apellidoMaterno" : apellidoMaterno,
+                    "fechaNacimiento" : new Date(fechaNacimiento),
+                    "correoElectronico" : correoElectronico,
+                    "contenido" : localStorage.getItem("Foto")
+                }
+				
+        		console.log(alumno)
+        	
+                let valido = validarDatosAlumno(alumno);
+                
+                if (valido === 1 ) {
+                    enviarDatosAlumno("actualizar_alumno", alumno);
+                } else {
+                    alert("Capture todos los campos.")
+                }
+        } else {
+            let lector = new FileReader();
+            let entradaFoto = document.querySelector('#iptFoto');
+            let archivo = entradaFoto.files;
             
-            let alumno = {
-            	"id_alumno" : id_alumno,
-                "nombre" : nombre,
-                "apellidoPaterno" : apellidoPaterno,
-                "apellidoMaterno" : apellidoMaterno,
-                "fechaNacimiento" : new Date(fechaNacimiento),
-                "correoElectronico" : correoElectronico,
-                "contenido" : jpge64
-            }
+            //valida
+            let blob = new Blob(archivo, {type : 'image/jpeg'})
+            console.log(archivo)
 
-            let valido = validarDatosAlumno(alumno);
-            
-            if (valido === 1 ) {
-                enviarDatosAlumno("actualizar_alumno", alumno);
-            } else {
-                alert("Capture todos los campos.")
-            }
+            lector.readAsBinaryString(blob);
+            lector.onload = () => {
+                let jpge64 = window.btoa(lector.result);
+                
+                let alumno = {
+                	"id_alumno" : id_alumno,
+                    "nombre" : nombre,
+                    "apellidoPaterno" : apellidoPaterno,
+                    "apellidoMaterno" : apellidoMaterno,
+                    "fechaNacimiento" : new Date(fechaNacimiento),
+                    "correoElectronico" : correoElectronico,
+                    "contenido" : jpge64
+                }
+
+                let valido = validarDatosAlumno(alumno);
+                
+                if (valido === 1 ) {
+                    enviarDatosAlumno("actualizar_alumno", alumno);
+                } else {
+                    alert("Capture todos los campos.")
+                }
+            }        	
         }
+
     }
 
     //desplegarFoto
@@ -259,8 +284,10 @@
         * Contiene la información de todos los archivos seleccionado
         */
         let archivo = entradaFoto.files;    
+        console.log(archivo)
         let foto = document.createElement('img');
         foto.setAttribute("width", "100%");
+        foto.setAttribute("id", "imgFoto");
         let valido = validarFotoAlumno(archivo[0])
         
         if (valido == 1) {
@@ -401,7 +428,10 @@
          	view[i] = decodedData.charCodeAt(i);
          }
          
-         let file = new Blob([view], {type:'image/jpeg'});
+         let entradaFoto = document.querySelector('#iptFoto');
+         console.log(entradaFoto.files)
+         let file = new File([view],"foto.jpeg", {type: 'image/jpeg'});
+
          let url = URL.createObjectURL(file);
          
          return url;
