--- a/WebContent/WEB-INF/views/editar_materia.html
+++ b/WebContent/WEB-INF/views/editar_materia.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <title>Editar Alumno</title>
+        <title>Editar Materia</title>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
@@ -32,7 +32,7 @@
                 
             <!--Contenido-->
             <section data-role="content">
-                <h2>Editar Alumno</h2>
+                <h2>Editar Materia</h2>
                 <label> Seleccione la materia:</label>
                 <select id="comboMaterias">                                        
                         
@@ -43,10 +43,15 @@
                                         
                     <label>Nombre de la Materia:</label>
                     <input type="text" id="iptNombreMateria" required="required" pattern="^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$"/>
-                    <label>N&uacutemero de Cupos M&aacuteximo</label>
-                    <input type="number" id="iptNumMaxCupo" required="required" max="99" min="1" pattern="^[0-9]{1,2}$"/>
+                  
+                    <label>Actualizar Cupos</label>
+                    <input  type="number" id="iptNumMaxCupo" required="required" max="99" min="1" pattern="^[0-9]{1,2}$"/>
                     
-                    <label>Cupos Totales</label>
+                    
+                    <label>Cupo Inicial</label>
+                    <input type="number" id="iptCupoInicial" readonly="readonly"/>
+                    
+                    <label>Cupos Disponibles</label>
                     <input type="number" id="iptTotal" readonly="readonly"/>
 					
                     <input data-icon="edit" data-theme="b" type="button" id="btnEditarMateria" value="Editar">
@@ -60,7 +65,7 @@
 								<th>Apellido Paterno</th>
 								<th>Apellido Materno</th>
 								<th>Correo</th>
-								<th>Foto</th>
+							
 							</tr>
 						</thead>				    	
 			<tr ng-repeat="dato in alumno">	
@@ -82,9 +87,7 @@
 					</td>
 				
 				<!-- pendiente lienzo foto no muestra -->
-					<td  id="divLienzo">											
-					<img id="imgFoto" width="100%" src="#"/>
-					</td>
+					
 			</tr>		
 				</table>
 				<!--  funciona
@@ -107,7 +110,7 @@
    
           let materiaSeleccionada = document.querySelector("#comboMaterias");
           
-          materiaSeleccionada.addEventListener('change', () => {            
+          materiaSeleccionada.addEventListener('change', () => {           
               let id_materia = materiaSeleccionada.value
       		
               //Obtiene los alumnos que actualmente 
@@ -118,27 +121,46 @@
           		   	
                     let input = obtiene.contenido;	            		
     	           //	console.log(input)
-    	           	
-          			//let urlImagen = cargarBufferJPGE(obtiene.contenido);
-          	    	//desplegarFoto2(urlImagen);          	    	                   
-            	    document.getElementById("iptTotal").value=numero;
-          	    	
+    	           	          		            	    
+            	    //let urlImagen = cargarBufferJPGE(alumno.contenido);
+                	//desplegarFoto2(urlImagen);
+                	
           		   });         	
           	  });
               
               
+              //obtiene materias que ya han sido ocupadas
               $http.get("materiasOcupadas/"+id_materia).then(function(response) {
             		$scope.alumno = response.data;
-            		console.log($scope.alumno)
+            		
             		//obtengo el numero que manda la consulta
             		let numero= $scope.alumno = response.data;
             	    document.getElementById("iptTotal").value=numero;
+            	    
+            	    document.getElementById("iptNumMaxCupo").value=numero;
             	  });
+              
+            
+          //obtener cupo inicial              
+          $http.get("cupoInicial/"+id_materia).then(function(response) {
+        		
+       	  $scope.alumno = response.data;
+      	
+      		//obtengo el numero que manda la consulta
+      		let numero= $scope.alumno = response.data;      	  
+       	   document.getElementById("iptCupoInicial").value=response.data;
+        	    
+        });
+          
+            
                             
               if (id_materia > 0)	consultarMateria("listarConsultaMateria/"+id_materia);
           });
           
       });  
+      
+	
+	 
       
       let consultaAlumnosAsociados = (ruta) => {
       	fetch(ruta,{
@@ -204,12 +226,13 @@
           let nombre = document.getElementById("iptNombreMateria").value;
           let numMaxCupo = document.getElementById("iptNumMaxCupo").value;
           let idMateria = document.getElementById("iptIdMateria").value;
-          
+         // let iptTotal = document.getElementById("iptTotal").value=numero;
           
           let materia = {
               "nombre" : nombre,
               "numMaxCupo" : numMaxCupo,
-          	"id_materia" : idMateria
+          	  "id_materia" : idMateria,
+          	  "cupoInicial": numMaxCupo
           }
           console.log(materia)
           let valido = validarDatosMateria(materia);
@@ -287,6 +310,7 @@
               return respuesta.json();
           }).then ((data) => {
               desplegarComboMaterias(data);
+              //document.getElementById("iptCupoInicial").value=data.cupoInicial;
           }).
           catch(error => {
               alert(error);
