--- a/WebContent/WEB-INF/views/actualizar_alumno.html
+++ b/WebContent/WEB-INF/views/actualizar_alumno.html
@@ -10,6 +10,11 @@
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
        
+       <!-- Boostrap -->
+       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	crossorigin="anonymous">
+       
 	
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -63,7 +68,7 @@
                         <input id="btnEditarAlumno" type="button" data-theme="b" data-icon="check" value="Guardar"/>
                     </form>
     
-                    <aside id="divLienzo" class="ui-block-b" style="width: 580px;"> 
+                    <aside id="divLienzo" class="ui-block-b" style="width: 560px;"> 
                         <img id="imgFoto" width="100%" src="#"/>    
                     </aside>     
                     
@@ -471,8 +476,7 @@
          let url = URL.createObjectURL(file);
          
          return url;
-    }
-      
+    }      
 
 });
 	
