--- a/WebContent/WEB-INF/views/editar_materia.html
+++ b/WebContent/WEB-INF/views/editar_materia.html
@@ -90,7 +90,7 @@
 					</td>
 								
 					<td>	    
-  						<img style="width: 50px; height: 50px;" data-ng-src="data:image/jpeg;base64,{{alumno.conte}}" />
+  				<img style="width: 50px; height: 50px;" data-ng-src="data:image/jpeg;base64,{{dato.contenido}}" />
 					</td>					
 				
 			</tr>		
@@ -118,13 +118,13 @@
               $http.get("alumnosAsociados/"+id_materia).then(function(response) {
           		$scope.alumno = response.data;          
           		
-          		angular.forEach($scope.alumno, function(obtiene){          		   	
+          		angular.forEach($scope.alumno, function(obtiene){         		   	
                     let input = obtiene.contenido;	            		
     	           	console.log(input)
     	           	          		            	    
             	    //let urlImagen = cargarBufferJPGE(obtiene.contenido);
                 	//desplegarFoto2(urlImagen);
-                	$scope.alumno.conte = obtiene.contenido;
+                	$scope.alumno.contenido = input;
     	            //$scope.alumno.contenido = 'data:image/jpeg;base64,' + obtiene.contenido ;
           		   });
           	  });
