--- a/WebContent/WEB-INF/views/registrar_materia.html
+++ b/WebContent/WEB-INF/views/registrar_materia.html
@@ -52,7 +52,8 @@
 	            
 	            let materia = {
 	                "nombre" : nombre,
-	                "numMaxCupo" : numMaxCupo
+	                "numMaxCupo" : numMaxCupo,
+	                "cupoInicial" : numMaxCupo
 	            }
 	            console.log(materia)
 	            let valido = validarDatosMateria(materia);
