--- a/WebContent/WEB-INF/views/asignar_materias.html
+++ b/WebContent/WEB-INF/views/asignar_materias.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+ <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet"
@@ -11,7 +12,7 @@
 </head>
 
 <body>
-	<!--PÃ¡gina alumno-materia -->
+	<!--Página alumno-materia -->
 	<div data-role="page" id="asignar_materias" data-dom-cache="false">
 		<!--Encabezado-->
 		<header data-role="header" data-theme="b">
@@ -184,7 +185,7 @@
         let buscarAlumnoMateria = (ruta) => {
             /**
             * Busca las materias las cuales esten asociadas al alumno.
-            * Si no tiene asociada materias, el sistema deberÃ¡ regresar una lista vacia.
+            * Si no tiene asociada materias, el sistema deberá regresar una lista vacia.
             */
             fetch(ruta, {
                 method : 'GET',
@@ -214,8 +215,7 @@
                     input.removeAttribute("data-cacheval");	
                     
                 });
-                console.log("mensaje")
-                  
+                
                 $("#fieldMaterias").trigger("create");
                 //obtiene id_alumno para mostrar las materias en cupoMax=0
                 let alumnoSeleccionado = document.querySelector("#comboAlumnos");
@@ -246,6 +246,7 @@
             }). 
             then( data => {
                 alert("Se han actualizado las materias del alumno.");
+                location.reload("/");
             })
             .catch( error => alert(error));
         }
@@ -253,7 +254,7 @@
       //desplegarMaterias
         let desplegarMaterias = (lstMaterias) => {
             /**
-            * DesplegarÃ¡ las materias que esten registrados en un componenye
+            * Desplegará las materias que esten registrados en un componenye
             */
             let iptMaterias = ``;
             let fieldMaterias = document.querySelector("#fieldMaterias");
@@ -268,7 +269,7 @@
                 <fieldset data-role="controlgroup" >
                 <legend>Seleccione la materia:</legend>
                 ${iptMaterias}
-                <button type="button" id="btnGrabarAlumnoMaterias" data-theme="b" data-icon="refresh"> Grabar AsociaciÃ³n </button>
+                <button type="button" id="btnGrabarAlumnoMaterias" data-theme="b" data-icon="refresh"> Grabar Asociacion </button>
             `
             fieldMaterias.innerHTML = fdtMaterias;
             $("#fieldMaterias").trigger("create");
@@ -280,7 +281,7 @@
         
         let desplegarAlumnos = (lstAlumnos) => {
             /**
-            * DesplegarÃ¡ los alumnos que esten registrados en un componente combox.
+            * Desplegará los alumnos que esten registrados en un componente combox.
             */
             let otnAlumno = ``;
             
