--- a/WebContent/WEB-INF/views/editar_materia.html
+++ b/WebContent/WEB-INF/views/editar_materia.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+    	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        
         <title>Editar Materia</title>
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -22,7 +24,7 @@
     </head>
 
 <body ng-app="muestra" ng-controller="controlador">
-        <!--PÃ¡gina editar materia-->
+        <!--Página editar materia-->
         <div data-role="page" id="editar_materia">
             <!--Encabezado-->
             <header data-role="header" data-theme="b">
@@ -39,7 +41,7 @@
                 </select>
                     
                 <form data-ajax="false">                   
-                    <input type="text" id="iptIdMateria" hidden/>
+                    <input type="text" id="iptIdMateria" />
                                         
                     <label>Nombre de la Materia:</label>
                     <input type="text" id="iptNombreMateria" required="required" pattern="^[A-Z\u00C0-\u00DCa-z\u00E0-\u00FC0-9\s]{1,99}$"/>
@@ -96,7 +98,7 @@
    
     var app = angular.module('muestra', []);
 	app.controller('controlador', function($scope, $http) {
-	//response seÃ±ala que el parametro contendran los datos de respuesta
+	//response señala que el parametro contendran los datos de respuesta
 	
 	  window.addEventListener('load', () => {
           obtenerDatosMaterias("listarMateria");
@@ -166,7 +168,7 @@
       //desplegarMateria
       let desplegarMateria = (materia) => {
 	    	/**
-	    	* DesplegarÃ¡ los datos de la materia, en el cual se mostrarÃ¡ el nombre de la materia y el nÃºmero mÃ¡ximo de cupos
+	    	* Desplegará los datos de la materia, en el cual se mostrará el nombre de la materia y el número máximo de cupos
 	    	**/
 	    	document.getElementById("iptNombreMateria").value = materia.nombre;
 	    	document.getElementById("iptNumMaxCupo").value = materia.numMaxCupo;
@@ -222,7 +224,7 @@
               let esValido = validaNumMaxCupo.exec(materia["numMaxCupo"]);
               
               if (esValido == null || materia["numMaxCupo"] <= 0) {
-                  alert("El nÃºmero de cupos no ha sido validado.");
+                  alert("El número de cupos no ha sido validado.");
               } else {
                   valido >>= 1;		
               }
@@ -244,9 +246,9 @@
               }
           }).
           then(respuesta => {
-              console.log(respuesta);
+              console.log(respuesta)
               if (respuesta.ok == true) {
-                  if (respuesta.status == 200) alert("La materia ha sido actualizada.")
+                  alert("La materia ha sido actualizada.");
                   location.reload("/");
               } else {
                   alert("No se ha podido actualizar la materia.");
@@ -277,7 +279,7 @@
 		
       let desplegarComboMaterias = (lstMaterias) => {
       	/**
-      	* DesplegarÃ¡ las materias que esten registradas, las cuales se mostrarÃ¡n en un compotente combox.
+      	* Desplegará las materias que esten registradas, las cuales se mostrarán en un compotente combox.
       	*/
       	let otnMateria = ``;
       	let i = 0;
@@ -323,7 +325,7 @@
       //desplegarMaterias
       let desplegarMaterias = (lstMaterias) => {
           /**
-          * DesplegarÃ¡ las materias que esten registrados en un componenye
+          * Desplegará las materias que esten registrados en un componenye
           */
           let iptMaterias = ``;
           let fieldMaterias = document.querySelector("#fieldMaterias");
@@ -338,7 +340,7 @@
               <fieldset data-role="controlgroup" >
               <legend>Seleccione la materia:</legend>
               ${iptMaterias}
-              <button type="button" id="btnGrabarAlumnoMaterias" data-theme="b" data-icon="refresh"> Grabar AsociaciÃ³n </button>
+              <button type="button" id="btnGrabarAlumnoMaterias" data-theme="b" data-icon="refresh"> Grabar Asociación </button>
           `
           fieldMaterias.innerHTML = fdtMaterias;
           $("#fieldMaterias").trigger("create");
